# Resultpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt  main.cxx
lib/: ResultImpl.hxx  resultpp.hxx
